--- a/Denv/zig/Dockerfile
+++ b/Denv/zig/Dockerfile
@@ -1,3 +1,8 @@
 FROM ghcr.io/eoeair/cenv:alpine
 
-RUN apk add --no-cache zig
+ENV ZIG_VERSION=0.15.1 \
+    PATH="/opt/zig:${PATH}"
+
+RUN wget https://ziglang.org/download/${ZIG_VERSION}/zig-x86_64-linux-${ZIG_VERSION}.tar.xz && \
+    tar -xf zig-x86_64-linux-${ZIG_VERSION}.tar.xz && \
+    mv zig-x86_64-linux-${ZIG_VERSION} /opt/zig
