--- a/Denv/c/Dockerfile
+++ b/Denv/c/Dockerfile
@@ -1,4 +1,4 @@
 FROM ghcr.io/eoeair/cenv:debian
 
-RUN apt-get update --yes && apt-get install --yes --no-install-recommends gcc libc6-dev make && \
+RUN apt-get update --yes && apt-get install --yes --no-install-recommends gcc libc6-dev gdb && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
