--- a/Denv/upython/.devcontainer/devcontainer.json
+++ b/Denv/upython/.devcontainer/devcontainer.json
@@ -4,12 +4,11 @@
 	"name": "upython",
 	
 	"image": "ghcr.io/eoeair/cenv:upython",
-	"runArgs": ["--device=/dev/ttyACM0"],
+	"runArgs": ["--device=/dev/ttyUSB0"],
 	// Configure vscode-extensions.
 	"customizations": {
 		"vscode": {
-		  "extensions": ["davescodemusings.mpremote", "walklinewang.code-completion-for-micropython"]
-		]
+		  "extensions": ["davescodemusings.mpremote", "walklinewang.code-completion-for-micropython", "youkony.serial-xterm"]
 		}
 	  }
 }
