--- a/Denv/upython/.devcontainer/devcontainer.json
+++ b/Denv/upython/.devcontainer/devcontainer.json
@@ -3,12 +3,13 @@
 {
 	"name": "upython",
 	
-	"image": "ghcr.io/eoeair/cenv:upython",
-	"runArgs": ["--device=/dev/ttyUSB0"],
+	"image": "ghcr.nju.edu.cn/eoeair/cenv:upython",
+	"runArgs": ["--device=/dev/ttyACM0"],
 	// Configure vscode-extensions.
 	"customizations": {
 		"vscode": {
 		  "extensions": ["davescodemusings.mpremote", "walklinewang.code-completion-for-micropython", "youkony.serial-xterm"]
 		}
-	  }
+	  },
+	"postCreateCommand": "apt-get update && apt-get install -y git && ssh-keyscan github.com >> ~/.ssh/known_hosts"
 }
