--- a/Denv/zig/.devcontainer/devcontainer.json
+++ b/Denv/zig/.devcontainer/devcontainer.json
@@ -11,5 +11,5 @@
 		  "extensions": ["ziglang.vscode-zig"]
 		}
 	  },
-	"postCreateCommand": "apk add git && ssh-keyscan github.com >> ~/.ssh/known_hosts"
+	"postCreateCommand": "apk add git openssh && ssh-keyscan github.com >> ~/.ssh/known_hosts"
 }
