remove minicom & xterm_vsx

--- a/Denv/upython/Dockerfile
+++ b/Denv/upython/Dockerfile
@@ -1,4 +1,4 @@
 FROM ghcr.io/eoeair/cenv:alpine
 
 # install mpremote
-RUN apk add --no-cache py3-pip minicom && pip install mpremote --break-system-packages && pip cache purge
+RUN apk add --no-cache py3-pip picocom && pip install mpremote --break-system-packages && pip cache purge
