--- a/Denv/upython/.devcontainer/devcontainer.json
+++ b/Denv/upython/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
 	// Configure vscode-extensions.
 	"customizations": {
 		"vscode": {
-		  "extensions": ["ms-python.vscode-pylance", "davescodemusings.mpremote", "youkony.serial-xterm"]
+		  "extensions": ["ms-pyright.pyright", "davescodemusings.mpremote"]
 		}
 	  },
 	"postCreateCommand": "apk add git openssh && pip install micropython-rp2-pico-stubs --break-system-packages && ssh-keyscan github.com >> ~/.ssh/known_hosts"
