--- a/Denv/python/.devcontainer/devcontainer.json
+++ b/Denv/python/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
 	// Configure vscode-extensions.
 	"customizations": {
 		"vscode": {
-		  "extensions": ["ms-python.python", "donjayamanne.python-environment-manager", "ms-python.vscode-pylance", "ms-toolsai.jupyter"]
+		  "extensions": ["ms-python.python", "ms-python.vscode-pylance", "ms-toolsai.jupyter", "codeium.codeium"]
 		}
 	  },
 	"postCreateCommand": "apt-get update && apt-get install -y git && ssh-keyscan github.com >> ~/.ssh/known_hosts"
