--- a/Gpu/rocm/.devcontainer/devcontainer.json
+++ b/Gpu/rocm/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
 	// Configure vscode-extensions.
 	"customizations": {
 		"vscode": {
-			"extensions": ["ms-python.python", "ms-python.vscode-pylance", "ms-toolsai.jupyter"]
+			"extensions": ["ms-python.python", "ms-python.vscode-pylance", "ms-toolsai.jupyter", "codeium.codeium"]
 		}
 	  },
 	"postCreateCommand": "apt-get update --yes && apt-get install --yes git && ssh-keyscan github.com >> ~/.ssh/known_hosts"
