--- a/Renv/steam/Dockerfile
+++ b/Renv/steam/Dockerfile
@@ -11,7 +11,7 @@ RUN sed -i 's/main/main contrib non-free non-free-firmware/g' /etc/apt/sources.l
     echo steam steam/question select "I AGREE" | debconf-set-selections && \
     echo steam steam/license note '' | debconf-set-selections && \
     dpkg --add-architecture i386 && \
-    apt-get update --yes && apt-get install --yes steamcmd && \
+    apt-get update --yes && apt-get install --yes steamcmd ca-certificates && \
     apt-get clean && rm -rf /var/lib/apt/lists/* && \
     # Create user
     useradd --no-log-init --create-home --shell /bin/bash --uid "${UID}" --no-user-group "${USER}" && \
