--- a/.github/workflows/build&push.yml
+++ b/.github/workflows/build&push.yml
@@ -19,12 +19,12 @@ permissions:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   Base:
-    runs-on: arc
+    runs-on: eoeair-arc
     container:
-      image: ghcr.nju.edu.cn/kaniko-build/dist/chainguard-dev-kaniko/executor:v1.25.1-debug
+      image: ghcr.nju.edu.cn/kaniko-build/dist/chainguard-dev-kaniko/executor:latest-debug
     strategy:
       matrix:
-        tag: [alpine, debian]
+        tag: [alpine, debian, debian12]
     steps:
       - &checkout
         run: |
@@ -53,9 +53,9 @@ jobs:
 
   Denv:
     needs: base
-    runs-on: arc
+    runs-on: eoeair-arc
     container:
-      image: ghcr.nju.edu.cn/kaniko-build/dist/chainguard-dev-kaniko/executor:v1.25.1-debug
+      image: ghcr.nju.edu.cn/kaniko-build/dist/chainguard-dev-kaniko/executor:latest-debug
     strategy:
       matrix:
         tag: [c, cpp, python, zig, upython]
@@ -71,9 +71,9 @@ jobs:
 
   Renv:
     needs: base
-    runs-on: arc
+    runs-on: eoeair-arc
     container:
-      image: ghcr.nju.edu.cn/kaniko-build/dist/chainguard-dev-kaniko/executor:v1.25.1-debug
+      image: ghcr.nju.edu.cn/kaniko-build/dist/chainguard-dev-kaniko/executor:latest-debug
     strategy:
       matrix:
         tag: [zine, mc_be, mc_jre_17, mc_jre_21, steam, novnc]
@@ -89,12 +89,12 @@ jobs:
 
   Gpu:
     needs: base
-    runs-on: arc
+    runs-on: eoeair-arc
     container:
-      image: ghcr.nju.edu.cn/kaniko-build/dist/chainguard-dev-kaniko/executor:v1.25.1-debug
+      image: ghcr.nju.edu.cn/kaniko-build/dist/chainguard-dev-kaniko/executor:latest-debug
     strategy:
       matrix:
-        tag: [rocm, rocm6.4]
+        tag: [rocm, rocm6.4, cuda]
     steps:
       - *checkout
       - *login
@@ -108,7 +108,7 @@ jobs:
 
   cleanup:
     needs: [Denv, Renv]
-    runs-on: arc
+    runs-on: eoeair-arc
     container:
       image: ghcr.nju.edu.cn/eoeair/cenv:base
     steps:
