--- a/.github/workflows/build&push.yml
+++ b/.github/workflows/build&push.yml
@@ -18,7 +18,30 @@ permissions:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  MirrorD:
+    runs-on: eoeair-arc
+    container:
+      image: ghcr.nju.edu.cn/eoeair/cenv:crane
+    strategy:
+      matrix:
+        tag: [bookworm-slim, testing-slim]
+    steps:
+      - run: crane auth login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
+      - run: crane copy swr.cn-north-4.myhuaweicloud.com/ddn-k8s/docker.io/library/debian:${{ matrix.tag }} ghcr.io/eoeair/cenv:${{ matrix.tag }}
+
+  MirrorA:
+    runs-on: eoeair-arc
+    container:
+      image: ghcr.nju.edu.cn/eoeair/cenv:crane
+    strategy:
+      matrix:
+        tag: [edge]
+    steps:
+      - run: crane auth login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
+      - run: crane copy swr.cn-north-4.myhuaweicloud.com/ddn-k8s/docker.io/alpine:${{ matrix.tag }} ghcr.io/eoeair/cenv:${{ matrix.tag }}
+
   Base:
+    needs: [MirrorA, MirrorD]
     runs-on: eoeair-arc
     container:
       image: ghcr.nju.edu.cn/kaniko-build/dist/chainguard-dev-kaniko/executor:latest-debug
@@ -58,7 +81,7 @@ jobs:
       image: ghcr.nju.edu.cn/kaniko-build/dist/chainguard-dev-kaniko/executor:latest-debug
     strategy:
       matrix:
-        tag: [c, cpp, python, zig, upython]
+        tag: [c, cpp, python, upython, zig]
     steps:
       - *checkout
       - *login
@@ -76,7 +99,7 @@ jobs:
       image: ghcr.nju.edu.cn/kaniko-build/dist/chainguard-dev-kaniko/executor:latest-debug
     strategy:
       matrix:
-        tag: [zine, mc_be, mc_jre_17, mc_jre_21, steam, novnc]
+        tag: [crane, mc_be, mc_jre_17, mc_jre_21, novnc, steam, zine]
     steps:
       - *checkout
       - *login
