--- a/Renv/mc_jre_21/Dockerfile
+++ b/Renv/mc_jre_21/Dockerfile
@@ -1,18 +1,6 @@
-FROM ghcr.io/eoeair/cenv:debian AS builder
-
-USER root
-
-RUN apt-get update --yes && apt-get install --yes gnupg curl && \
-    curl -s https://repos.azul.com/azul-repo.key | gpg --dearmor -o /usr/share/keyrings/azul.gpg && \
-    echo "deb [signed-by=/usr/share/keyrings/azul.gpg] https://repos.azul.com/zulu/deb stable main" | tee /etc/apt/sources.list.d/zulu.list && \
-    apt-get update --yes && apt-get install --yes --no-install-recommends zulu21-ca-jre-headless  
-
 FROM ghcr.io/eoeair/cenv:debian
 
-COPY --from=builder /usr/lib/jvm/zulu21/ /usr/lib/jvm/zulu21/
-
-USER root
-
-RUN ln -s /usr/lib/jvm/zulu21/bin/java /usr/bin/java
+RUN apt-get update --yes && apt-get install --yes --no-install-recommends openjdk-21-jre-headless && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /workspace
