--- a/.github/workflows/build&push.yml
+++ b/.github/workflows/build&push.yml
@@ -99,7 +99,7 @@ jobs:
       image: ghcr.nju.edu.cn/kaniko-build/dist/chainguard-dev-kaniko/executor:latest-debug
     strategy:
       matrix:
-        tag: [crane, mc_be, mc_jre_17, mc_jre_21, novnc, steam, zine]
+        tag: [crane, mc_be, mc_jre_21, novnc, steam, zine]
     steps:
       - *checkout
       - *login
@@ -117,7 +117,7 @@ jobs:
       image: ghcr.nju.edu.cn/kaniko-build/dist/chainguard-dev-kaniko/executor:latest-debug
     strategy:
       matrix:
-        tag: [rocm, rocm6.4, cuda]
+        tag: [rocm, cuda]
     steps:
       - *checkout
       - *login
