update rocm7.0.2 && resupport rocm6.4.4(for torch)

--- a/Denv/debforge/.devcontainer/devcontainer.json
+++ b/Denv/debforge/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
 	"name": "debforge",
 	
 	"image": "ghcr.io/eoeair/cenv:debforge",
-
+	"runArgs": ["--network=host", "--privileged", "--pid=host", "--shm-size=8G"],
 	// Configure vscode-extensions.
 	"customizations": {
 		"vscode": {
