--- a/Base/alpine/Dockerfile
+++ b/Base/alpine/Dockerfile
@@ -1,5 +1,8 @@
 FROM ghcr.io/eoeair/cenv:edge
 
+ENV LANG=C.UTF-8 \
+    LC_ALL=C.UTF-8
+
 USER root
 
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositories && \
