--- a/Denv/upython/.devcontainer/devcontainer.json
+++ b/Denv/upython/.devcontainer/devcontainer.json
@@ -4,12 +4,12 @@
 	"name": "upython",
 	
 	"image": "ghcr.io/eoeair/cenv:upython",
-	"runArgs": ["--device=/dev/ttyACM0"],
+	"runArgs": ["--device=/dev/ttyACM0", "--group-add=keep-groups"],
 	// Configure vscode-extensions.
 	"customizations": {
 		"vscode": {
 		  "extensions": ["ms-pyright.pyright", "davescodemusings.mpremote"]
 		}
 	  },
-	"postCreateCommand": "apk add git openssh && pip install micropython-rp2-pico-stubs --break-system-packages && ssh-keyscan github.com >> ~/.ssh/known_hosts"
+	"postCreateCommand": "apt update && apt install --yes git && pip install micropython-rp2-pico-stubs --break-system-packages && ssh-keyscan github.com >> ~/.ssh/known_hosts"
 }
