--- a/Denv/upython/.devcontainer/devcontainer.json
+++ b/Denv/upython/.devcontainer/devcontainer.json
@@ -11,5 +11,5 @@
 		  "extensions": ["ms-pyright.pyright", "davescodemusings.mpremote"]
 		}
 	  },
-	"postCreateCommand": "apt update && apt install --yes git && pip install micropython-rp2-pico-stubs --break-system-packages && ssh-keyscan github.com >> ~/.ssh/known_hosts"
+	"postCreateCommand": "apk add git openssh-client && pip install micropython-rp2-pico-stubs --break-system-packages && ssh-keyscan github.com >> ~/.ssh/known_hosts"
 }
