--- a/Denv/upython/Dockerfile
+++ b/Denv/upython/Dockerfile
@@ -1,6 +1,6 @@
-FROM ghcr.io/eoeair/cenv:debian
+FROM ghcr.io/eoeair/cenv:alpine
 
 # install mpremote
-RUN apt-get update --yes && apt-get install --yes --no-install-recommends picocom python3-pip && apt-get clean && rm -rf /var/lib/apt/lists/* && \
+RUN apk add py3-pip picocom && \
     echo '[global]\nindex-url = https://mirrors.ustc.edu.cn/pypi/web/simple' >  /etc/pip.conf && \
-    pip install mpremote mpy-cross --break-system-packages
+    pip install mpy-cross-v6.3 mpremote --break-system-packages
