--- a/.github/workflows/build&push.yml
+++ b/.github/workflows/build&push.yml
@@ -18,120 +18,48 @@ permissions:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  MirrorD:
-    runs-on: eoeair-arc
-    container:
-      image: ghcr.nju.edu.cn/eoeair/cenv:crane
-    strategy:
-      matrix:
-        tag: [testing-slim]
-    steps:
-      - run: crane auth login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
-      - run: crane copy swr.cn-north-4.myhuaweicloud.com/ddn-k8s/docker.io/library/debian:${{ matrix.tag }} ghcr.io/eoeair/cenv:${{ matrix.tag }}
-
-  MirrorA:
-    runs-on: eoeair-arc
-    container:
-      image: ghcr.nju.edu.cn/eoeair/cenv:crane
-    strategy:
-      matrix:
-        tag: [edge]
-    steps:
-      - run: crane auth login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
-      - run: crane copy swr.cn-north-4.myhuaweicloud.com/ddn-k8s/docker.io/alpine:${{ matrix.tag }} ghcr.io/eoeair/cenv:${{ matrix.tag }}
-
   Base:
-    needs: [MirrorA, MirrorD]
-    runs-on: eoeair-arc
-    container:
-      image: ghcr.nju.edu.cn/kaniko-build/dist/chainguard-dev-kaniko/executor:latest-debug
     strategy:
       matrix:
         tag: [alpine, debian]
-    steps:
-      - &checkout
-        run: |
-          wget https://github.com/eoeair/cenv/archive/refs/heads/main.zip
-          unzip main.zip
-          mv cenv-main/* .
-          rm -rf cenv-main main.zip
-      - &login
-        run: |
-          mkdir -p /kaniko/.docker
-          cat > /kaniko/.docker/config.json <<EOF
-          {
-            "auths": {
-              "ghcr.io": {
-                "auth": "$(echo -n '${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}' | base64)"
-              }
-            }
-          }
-          EOF
-      - run: |
-          /kaniko/executor \
-            --context Base/${{ matrix.tag }} \
-            --dockerfile Base/${{ matrix.tag }}/Dockerfile \
-            --destination ghcr.io/${{ github.repository }}:${{ matrix.tag }} \
-            --single-snapshot
+    uses: ./.github/workflows/build-job.yml
+    with:
+      folder: Base
+      tag: ${{ matrix.tag }}
 
   Denv:
     needs: Base
-    runs-on: eoeair-arc
-    container:
-      image: ghcr.nju.edu.cn/kaniko-build/dist/chainguard-dev-kaniko/executor:latest-debug
     strategy:
       matrix:
         tag: [c, cpp, python, upython, zig]
-    steps:
-      - *checkout
-      - *login
-      - run: |
-          /kaniko/executor \
-            --context Denv/${{ matrix.tag }} \
-            --dockerfile Denv/${{ matrix.tag }}/Dockerfile \
-            --destination ghcr.io/${{ github.repository }}:${{ matrix.tag }} \
-            --single-snapshot
+    uses: ./.github/workflows/build-job.yml
+    with:
+      folder: Denv
+      tag: ${{ matrix.tag }}
 
   Renv:
     needs: Base
-    runs-on: eoeair-arc
-    container:
-      image: ghcr.nju.edu.cn/kaniko-build/dist/chainguard-dev-kaniko/executor:latest-debug
     strategy:
       matrix:
         tag: [crane, jre_21, novnc, steam, zine]
-    steps:
-      - *checkout
-      - *login
-      - run: |
-          /kaniko/executor \
-            --context Renv/${{ matrix.tag }} \
-            --dockerfile Renv/${{ matrix.tag }}/Dockerfile \
-            --destination ghcr.io/${{ github.repository }}:${{ matrix.tag }} \
-            --single-snapshot 
+    uses: ./.github/workflows/build-job.yml
+    with:
+      folder: Renv
+      tag: ${{ matrix.tag }}
 
   Gpu:
     needs: Denv
-    runs-on: eoeair-arc
-    container:
-      image: ghcr.nju.edu.cn/kaniko-build/dist/chainguard-dev-kaniko/executor:latest-debug
     strategy:
       matrix:
         tag: [rocm, cuda]
-    steps:
-      - *checkout
-      - *login
-      - run: |
-          /kaniko/executor \
-            --context Gpu/${{ matrix.tag }} \
-            --dockerfile Gpu/${{ matrix.tag }}/Dockerfile \
-            --destination ghcr.io/${{ github.repository }}:${{ matrix.tag }} \
-            --single-snapshot 
-
+    uses: ./.github/workflows/build-job.yml
+    with:
+      folder: Gpu
+      tag: ${{ matrix.tag }}
 
   cleanup:
     needs: [Gpu, Renv]
-    runs-on: eoeair-arc
+    runs-on: self-hosted
     container:
       image: ghcr.nju.edu.cn/eoeair/cenv:debian
     steps:
